--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -18,6 +18,7 @@
       <div id="help_modal">
         <img src="../assets/images/papyrus_scroll_horizontal.png" id="papyrus_horizontal"/>
         <span onclick="document.getElementById('help_modal').style.display='none'" id="close_help">&times;</span>
+        <p id="help_modal_title">Help</p>
         <img src="../assets/images/swipe.png" class="swipe_and_tap"/>
         <img src="../assets/images/tap.png" class="swipe_and_tap"/>
       </div>
