--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -18,9 +18,15 @@
       <div id="help_modal">
         <img src="../assets/images/papyrus_scroll_horizontal.png" id="papyrus_horizontal"/>
         <span onclick="document.getElementById('help_modal').style.display='none'" id="close_help">&times;</span>
-        <p id="help_modal_title">Help</p>
-        <img src="../assets/images/swipe.png" class="swipe_and_tap"/>
-        <img src="../assets/images/tap.png" class="swipe_and_tap"/>
+        <p class="help_modal_title">Help</p>
+        <div class="swipe">
+          <img src="../assets/images/swipe.png" id="swipe"/>
+          <p>Swipe to Control Telescope View</p>
+        </div>
+        <div class="tap">
+          <img src="../assets/images/tap.png" id="tap"/>
+          <p>Tap Explore Buttons to Continue</p>
+        </div>
       </div>
 
     <!-- Settings Icon Button -->
