Removed some tests

--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -18,7 +18,7 @@
       <div id="help_modal">
         <img src="../assets/images/papyrus_scroll_horizontal.png" id="papyrus_horizontal"/>
         <span onclick="document.getElementById('help_modal').style.display='none'" id="close_help">&times;</span>
-        <p class="help_modal_title">Help</p>
+        <p id="help_modal_title">Help</p>
         <div class="swipe">
           <img src="../assets/images/swipe.png" id="swipe"/>
           <p>Swipe to Control Telescope View</p>
