--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -21,11 +21,13 @@
         <p id="help_modal_title">Help</p>
         <div class="swipe">
           <img src="../assets/images/swipe.png" id="swipe"/>
-          <p>Swipe to Control Telescope View</p>
+          <span>Swipe to Control</span>
+          <span>Telescope View</span>
         </div>
         <div class="tap">
           <img src="../assets/images/tap.png" id="tap"/>
-          <p>Tap Explore Buttons to Continue</p>
+          <span>Tap Explore Buttons</span>
+          <span>to Continue</span>
         </div>
       </div>
 
