Missed the deadline

--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -21,13 +21,17 @@
         <p id="help_modal_title">Help</p>
         <div class="swipe">
           <img src="../assets/images/swipe.png" id="swipe"/>
-          <span>Swipe to Control</span>
-          <span>Telescope View</span>
+          <div class="text_box">
+            <span class="instructions">Swipe to Control</span>
+            <span class="instructions">Telescope View</span>
+          </div>
         </div>
         <div class="tap">
           <img src="../assets/images/tap.png" id="tap"/>
-          <span>Tap Explore Buttons</span>
-          <span>to Continue</span>
+          <div class="text_box">
+            <span class="instructions">Tap Explore Buttons</span>
+            <span class="instructions">to Continue</span>
+          </div>
         </div>
       </div>
 
