--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -17,7 +17,7 @@
     <img src="../assets/images/help_icon.png" onclick="document.getElementById('help_modal').style.display='block'" id="help-icon-button"/>
       <div id="help_modal">
         <img src="../assets/images/papyrus_scroll_horizontal.png" id="papyrus_horizontal"/>
-        <span onclick="document.getElementById('help_modal').style.display='none'" id="close_help">&times;</span>
+        <span onclick="document.getElementById('help_modal').style.display='none'" id="close_help">X</span>
         <p id="help_modal_title">Help</p>
         <div class="swipe">
           <img src="../assets/images/swipe.png" id="swipe"/>
