--- a/lore_and_mythology_experience/pages/index.html
+++ b/lore_and_mythology_experience/pages/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Psyche Lore and Mythology Launch Page</title>
-    <link rel="stylesheet" href="../assets/css/launch.css" />
-    <script src="../assets/js/launch.js" defer></script>
+    <link rel="stylesheet" href="../assets/css/index.css" />
+    <script src="../assets/js/index.js" defer></script>
   </head>
 
   <body>
