Working on US322Task355

--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -53,6 +53,7 @@
       </div>
     </div>
 
+    <script src="../assets/js/perlin.js"></script>
     <script src="../assets/js/main.js" type="module"></script>
   </body>
 </html>
