Testing Nicole's changes before working on 334

--- a/lore_and_mythology_experience/pages/index.html
+++ b/lore_and_mythology_experience/pages/index.html
@@ -36,7 +36,7 @@
 
         <!-- Launch Button -->
         <button id="launch-button" type="button">
-            <a class="about-link" href="./main_page.html">Launch AR Experience</a>
+            <a class="about-link" href="./amp_context.html">Launch AR Experience</a>
         </button>
 
         <!-- About Button -->
@@ -85,8 +85,7 @@
         <div class="footer">
           <div class="footer-links">
             <div class="footer-link"><a href="../../satellite_experience/pages/about_page.html">About</a></div>
-            <div class="footer-link"><a href="#">More Experiences</a></div>
-            <div class="footer-link"><a href="#">Psyche Mission</a></div>
+            <div class="footer-link"><a href="https://psyche.asu.edu/">Psyche Mission</a></div>
           </div>
         </div>
     </div>
