Manipulating SpaceScene.js for 334

--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -53,6 +53,9 @@
       </div>
     </div>
 
+    <!-- Three.js Canvas Container -->
+    <div id="scene"></div>
+
     <script src="../assets/js/main.js" type="module"></script>
   </body>
 </html>
