Testing US322Task329

--- a/lore_and_mythology_experience/pages/chrysalis.html
+++ b/lore_and_mythology_experience/pages/chrysalis.html
@@ -10,13 +10,33 @@
     <!-- Images -->
     <div class="image-container">
       <div class="butterfly">
-        <img src="../assets/images/chrysalis/butterfly.png" id="butterfly" />
-        <img src="../assets/images/chrysalis/butterfly2.png" id="butterfly2" />
+        <img
+          src="../assets/images/chrysalis/butterfly.png"
+          id="butterfly"
+          draggable="false"
+        />
+        <img
+          src="../assets/images/chrysalis/butterfly2.png"
+          id="butterfly2"
+          draggable="false"
+        />
       </div>
       <div class="chrysalis">
-        <img src="../assets/images/chrysalis/asteroid.png" id="asteroid" />
-        <img src="../assets/images/chrysalis/chrysalis.png" id="chrysalis" />
-        <img src="../assets/images/chrysalis/chrysalis2.png" id="chrysalis2" />
+        <img
+          src="../assets/images/chrysalis/asteroid.png"
+          id="asteroid"
+          draggable="false"
+        />
+        <img
+          src="../assets/images/chrysalis/chrysalis.png"
+          id="chrysalis"
+          draggable="false"
+        />
+        <img
+          src="../assets/images/chrysalis/chrysalis2.png"
+          id="chrysalis2"
+          draggable="false"
+        />
       </div>
     </div>
 
@@ -26,7 +46,7 @@
         The asteroid Psyche has the resemblance of a chrysalis. In Greek, the
         word for chrysalis is “cyrsos”, meaning gold, gold-colored, or wealth.
       </div>
-      <img src="../assets/images/chrysalis/scroll.png" />
+      <img src="../assets/images/chrysalis/scroll.png" draggable="false" />
     </div>
 
     <script src="../assets/js/chrysalis.js"></script>
