--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -14,32 +14,45 @@
     <div class="main-title">Find the Psyche Asteroid To Start the Journey.</div>
 
     <!-- Help Icon Button -->
-    <img src="../assets/images/help_icon.png" onclick="document.getElementById('help_modal').style.display='block'" id="help-icon-button"/>
-      <div id="help_modal">
-        <img src="../assets/images/papyrus_scroll_horizontal.png" id="papyrus_horizontal"/>
-        <span onclick="document.getElementById('help_modal').style.display='none'" id="close_help">X</span>
-        <p id="help_modal_title">Help</p>
-        <div class="swipe">
-          <img src="../assets/images/swipe.png" id="swipe"/>
-          <div class="text_box">
-            <span class="instructions">Swipe to Control</span>
-            <span class="instructions">Telescope View</span>
-          </div>
-        </div>
-        <div class="tap">
-          <img src="../assets/images/tap.png" id="tap"/>
-          <div class="text_box">
-            <span class="instructions">Tap Explore Buttons</span>
-            <span class="instructions">to Continue</span>
-          </div>
+    <img
+      src="../assets/images/help_icon.png"
+      onclick="document.getElementById('help_modal').style.display='block'"
+      id="help-icon-button"
+    />
+    <div id="help_modal">
+      <img
+        src="../assets/images/papyrus_scroll_horizontal.png"
+        id="papyrus_horizontal"
+        draggable="false"
+      />
+      <span
+        onclick="document.getElementById('help_modal').style.display='none'"
+        id="close_help"
+        >X</span
+      >
+      <p id="help_modal_title">Help</p>
+      <div class="swipe">
+        <img src="../assets/images/swipe.png" id="swipe" draggable="false" />
+        <div class="text_box">
+          <span class="instructions">Swipe to Control</span>
+          <span class="instructions">Telescope View</span>
         </div>
       </div>
+      <div class="tap">
+        <img src="../assets/images/tap.png" id="tap" draggable="false" />
+        <div class="text_box">
+          <span class="instructions">Tap Explore Buttons</span>
+          <span class="instructions">to Continue</span>
+        </div>
+      </div>
+    </div>
 
     <!-- Settings Icon Button -->
     <img
       src="../assets/images/settings_icon.png"
       alt="Settings Icon"
       id="settings-icon-button"
+      draggable="false"
     />
 
     <!-- Modal Container for Settings Page -->
@@ -53,9 +66,7 @@
       </div>
     </div>
 
-    <!-- Three.js Canvas Container -->
-    <div id="scene"></div>
-
+    <script src="../assets/js/perlin.js"></script>
     <script src="../assets/js/main.js" type="module"></script>
   </body>
 </html>
