One last test of 355

--- a/lore_and_mythology_experience/pages/index.html
+++ b/lore_and_mythology_experience/pages/index.html
@@ -1,55 +1,56 @@
 <!doctype html>
 <html lang="en">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<title>Psyche Lore and Mythology Launch Page</title>
-<link rel="stylesheet" href="../assets/css/index.css" />
-<script src="../assets/js/index.js" defer></script>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Psyche Lore and Mythology Launch Page</title>
+    <link rel="stylesheet" href="../assets/css/index.css" />
+    <script src="../assets/js/index.js" defer></script>
+  </head>
 
-<body>
-<!-- Launch Page Psyche Icon and Title -->
-<div id="container">
-<div id="psyche-header">
-<img
-  src="../assets/images/Psyche_Icon_Color-SVG.svg"
-  alt="Psyche Icon"
-  id="psyche-icon" draggable="false"
-/>
-<header>
-  <h1>Psyche Lore and Mythology AR Experience</h1>
-</header>
-</div>
+  <body>
+    <!-- Launch Page Psyche Icon and Title -->
+    <div id="container">
+      <div id="psyche-header">
+        <img
+          src="../assets/images/Psyche_Icon_Color-SVG.svg"
+          alt="Psyche Icon"
+          id="psyche-icon"
+        />
+        <header>
+          <h1>Psyche Lore and Mythology AR Experience</h1>
+        </header>
+      </div>
 
-<!-- Experience Information -->
-<div class="psyche-info">
-<!-- Experience Description -->
-<div class="psyche-info-headline">Understand how the</div>
-<div class="psyche-info-headline">Psyche asteroid was</div>
-<div class="psyche-info-headline">discovered. Find out</div>
-<div class="psyche-info-headline">who discovered it.</div>
-<div class="psyche-info-headline">Learn about the</div>
-<div class="psyche-info-headline">lore and mythology</div>
-<div class="psyche-info-headline">behind the name Psyche.</div>
+      <!-- Experience Information -->
+      <div class="psyche-info">
+        <!-- Experience Description -->
+        <div class="psyche-info-headline">Understand how the</div>
+        <div class="psyche-info-headline">Psyche asteroid was</div>
+        <div class="psyche-info-headline">discovered. Find out</div>
+        <div class="psyche-info-headline">who discovered it.</div>
+        <div class="psyche-info-headline">Learn about the</div>
+        <div class="psyche-info-headline">lore and mythology</div>
+        <div class="psyche-info-headline">behind the name Psyche.</div>
 
-<button id="launch-button" type="button" onclick="onClick()">
-  Launch AR Experience
-</button>
+        <!-- Launch Button -->
+        <button id="launch-button" type="button">
+            <a class="about-link" href="./main_page.html">Launch AR Experience</a>
+        </button>
 
-<!-- About Button -->
-    <button class="about-button" type="button">
-      <a class="about-link" href="../../satellite_experience/pages/about_page.html">About the Team</a>
-    </button>
-  </div>
+        <!-- About Button -->
+        <button class="about-button" type="button">
+          <a class="about-link" href="../../satellite_experience/pages/about_page.html">About the Team</a>
+        </button>
+      </div>
 
-  <!-- Instructions -->
-  <div class="psyche-info" style="margin-top: 0px">
-    Clicking the Launch AR Experience button will start an interactive </br>
-    experience that will explore the lore and mythology behind the </br>
-      asteroid and the name Psyche.
-  </div>
+      <!-- Instructions -->
+      <div class="psyche-info" style="margin-top: 0px">
+        Clicking the Launch AR Experience button will start an interactive </br>
+        experience that will explore the lore and mythology behind the </br>
+          asteroid and the name Psyche.
+      </div>
 
       <!-- Main Content Section -->
       <div class="fade-in-section">
@@ -59,8 +60,8 @@
               <div class="psyche-info-line"> Find Psyche in the night sky.</div>
           </div>
 
-          <div class="psyche-lore-telescope-img" >
-              <img src="../assets/images/psyche_lore_and_mythology_experience_mockup_1.png" alt="Telescope pointing up into the night sky" draggable="false"/>
+          <div class="psyche-lore-telescope-img">
+              <img src="../assets/images/psyche_lore_and_mythology_experience_mockup_1.png" alt="Telescope pointing up into the night sky" />
           </div>
       </div>
 
@@ -76,7 +77,7 @@
           </div>
 
           <div class="psyche-lore-telescope-img">
-              <img src="../assets/images/psyche_lore_and_mythology_experience_mockup_2.png"" alt="Telescope discovering the asteroid in the night sky" draggable="false"/>
+              <img src="../assets/images/psyche_lore_and_mythology_experience_mockup_2.png"" alt="Telescope discovering the asteroid in the night sky" />
           </div>
       </div>
 
