--- a/lore_and_mythology_experience/pages/chrysalis.html
+++ b/lore_and_mythology_experience/pages/chrysalis.html
@@ -10,33 +10,13 @@
     <!-- Images -->
     <div class="image-container">
       <div class="butterfly">
-        <img
-          src="../assets/images/chrysalis/butterfly.png"
-          id="butterfly"
-          draggable="false"
-        />
-        <img
-          src="../assets/images/chrysalis/butterfly2.png"
-          id="butterfly2"
-          draggable="false"
-        />
+        <img src="../assets/images/chrysalis/butterfly.png" id="butterfly" />
+        <img src="../assets/images/chrysalis/butterfly2.png" id="butterfly2" />
       </div>
       <div class="chrysalis">
-        <img
-          src="../assets/images/chrysalis/asteroid.png"
-          id="asteroid"
-          draggable="false"
-        />
-        <img
-          src="../assets/images/chrysalis/chrysalis.png"
-          id="chrysalis"
-          draggable="false"
-        />
-        <img
-          src="../assets/images/chrysalis/chrysalis2.png"
-          id="chrysalis2"
-          draggable="false"
-        />
+        <img src="../assets/images/chrysalis/asteroid.png" id="asteroid" />
+        <img src="../assets/images/chrysalis/chrysalis.png" id="chrysalis" />
+        <img src="../assets/images/chrysalis/chrysalis2.png" id="chrysalis2" />
       </div>
     </div>
 
@@ -46,7 +26,7 @@
         The asteroid Psyche has the resemblance of a chrysalis. In Greek, the
         word for chrysalis is “cyrsos”, meaning gold, gold-colored, or wealth.
       </div>
-      <img src="../assets/images/chrysalis/scroll.png" draggable="false" />
+      <img src="../assets/images/chrysalis/scroll.png" />
     </div>
 
     <script src="../assets/js/chrysalis.js"></script>
