--- a/lore_and_mythology_experience/pages/amp_context.html
+++ b/lore_and_mythology_experience/pages/amp_context.html
@@ -33,9 +33,8 @@
             <div id="observatory"></div>
         </div>
         <div id="right">
-            <div id="telescopeBg">
-                <div id="telescope"></div>
-            </div>
+            <div id="telescopeBg"></div>
+            <div id="telescope"></div>
         </div>
     </div>
     <div id="fg1" class="foreground"></div>
