Scripts in html must have type="module"

--- a/lore_and_mythology_experience/pages/amp_context.html
+++ b/lore_and_mythology_experience/pages/amp_context.html
@@ -44,6 +44,6 @@
 
 
 
-<script src="../assets/js/context.js"></script>
+<script src="../assets/js/context.js" type="module" ></script>
 </body>
 </html>
