--- a/lore_and_mythology_experience/pages/index.html
+++ b/lore_and_mythology_experience/pages/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title>Psyche Lore and Mythology Launch Page</title>
 <link rel="stylesheet" href="../assets/css/index.css" />
-<script src="../assets/js/index.js" defer></script>
+<script src="../assets/js/index.js" type="module" defer></script>
 </head>
 
 <body>
