Testing US477Task450

--- a/lore_and_mythology_experience/pages/amp_context.html
+++ b/lore_and_mythology_experience/pages/amp_context.html
@@ -1,47 +1,41 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Website</title>
     <link rel="stylesheet" href="../assets/css/context.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div id="body">
-        <div id="top">
-            <div id="scroll" class="scroll-container">
-                <div class="scroll-text">
-                    Astronomical Observatory of Capodimonte
-                </div>
-                <div class="scroll-text">
-                    March 17th, 1852
-                </div>
-            </div>
+      <div id="top">
+        <div id="scroll" class="scroll-container">
+          <div class="scroll-text">Astronomical Observatory of Capodimonte</div>
+          <div class="scroll-text">March 17th, 1852</div>
         </div>
+      </div>
 
-        <div id="spacer">
-            <div id="scrollClick" class="scroll-container">
-                <div class="scroll-text">
-                    Click the Telescope to Search for Psyche
-                </div>
-            </div>
+      <div id="spacer">
+        <div id="scrollClick" class="scroll-container">
+          <div class="scroll-text">
+            Click the Telescope to Search for Psyche
+          </div>
         </div>
+      </div>
 
-    <div id="middle">
+      <div id="middle">
         <div id="left">
-            <div id="observatory"></div>
+          <div id="observatory"></div>
         </div>
         <div id="right">
-            <div id="telescopeBg"></div>
-            <div id="telescope"></div>
+          <div id="telescopeBg"></div>
+          <div id="telescope"></div>
         </div>
+      </div>
+      <div id="fg1" class="foreground"></div>
+      <div id="fg2" class="foreground"></div>
+      <div id="fg3" class="foreground"></div>
     </div>
-    <div id="fg1" class="foreground"></div>
-    <div id="fg2" class="foreground"></div>
-    <div id="fg3" class="foreground"></div>
-</div>
-
-
-</body>
+  </body>
 </html>
