--- a/lore_and_mythology_experience/pages/index.html
+++ b/lore_and_mythology_experience/pages/index.html
@@ -15,11 +15,10 @@
 <div id="psyche-header">
 <img
   src="../assets/images/Psyche_Icon_Color-SVG.svg"
-  alt="Psyche Icon"
-  id="psyche-icon" draggable="false"
-/>
+alt="Psyche Icon"
+id="psyche-icon" draggable="false" />
 <header>
-  <h1>Psyche Lore and Mythology AR Experience</h1>
+<h1>Psyche Lore and Mythology AR Experience</h1>
 </header>
 </div>
 
@@ -36,21 +35,21 @@
 
 <!-- Launch Button -->
 <button id="launch-button" type="button" onclick="onClick()">
-  Launch AR Experience
+Launch AR Experience
 </button>
 
 <!-- About Button -->
-    <button class="about-button" type="button">
-      <a class="about-link" href="../../satellite_experience/pages/about_page.html">About the Team</a>
-    </button>
-  </div>
+<button class="about-button" type="button">
+  <a class="about-link" href="../../satellite_experience/pages/about_page.html">About the Team</a>
+</button>
+</div>
 
-  <!-- Instructions -->
-  <div class="psyche-info" style="margin-top: 0px">
-    Clicking the Launch AR Experience button will start an interactive </br>
-    experience that will explore the lore and mythology behind the </br>
-      asteroid and the name Psyche.
-  </div>
+<!-- Instructions -->
+<div class="psyche-info" style="margin-top: 0px">
+Clicking the Launch AR Experience button will start an interactive </br>
+experience that will explore the lore and mythology behind the </br>
+  asteroid and the name Psyche.
+</div>
 
       <!-- Main Content Section -->
       <div class="fade-in-section">
@@ -61,11 +60,11 @@
           </div>
 
           <div class="psyche-lore-telescope-img" >
-              <img src="../assets/images/psyche_lore_and_mythology_experience_mockup_1.png" alt="Telescope pointing up into the night sky" draggable="false"/>
+              <img src="../assets/images/launch/context.jpeg" alt="Observatory with telescope pointing up into the night sky" draggable="false"/>
           </div>
-      </div>
+  </div>
 
-      <!-- Psyche Lore Content Section -->
+  <!-- Psyche Lore Content Section -->
       <div class="fade-in-section">
           <div class="psyche-info">
               <div class="psyche-info-line"> Watch the spacecraft launch.</div>
@@ -77,7 +76,7 @@
           </div>
 
           <div class="psyche-lore-telescope-img">
-              <img src="../assets/images/psyche_lore_and_mythology_experience_mockup_2.png"" alt="Telescope discovering the asteroid in the night sky" draggable="false"/>
+              <img src="../assets/images/launch/main.jpeg" alt="Telescope searching for the asteroid in the night sky" draggable="false"/>
           </div>
       </div>
 
