--- a/lore_and_mythology_experience/pages/main_page.html
+++ b/lore_and_mythology_experience/pages/main_page.html
@@ -11,7 +11,7 @@
     <div class="scope" id="scope"></div>
 
     <!--Title -->
-    <div class="main-title">Find the Psyche Asteroid To Start the Journey.</div>
+    <div class="main-title" id="main-title">Find the Psyche Asteroid To Start the Journey.</div>
 
     <!-- Help Icon Button -->
     <img
