Re-testing US449Task466

--- a/lore_and_mythology_experience/pages/index.html
+++ b/lore_and_mythology_experience/pages/index.html
@@ -60,7 +60,7 @@ experience that will explore the lore and mythology behind the </br>
           </div>
 
           <div class="psyche-lore-telescope-img" >
-              <img src="../assets/images/launch/context.jpeg" alt="Observatory with telescope pointing up into the night sky" draggable="false"/>
+              <img src="../assets/images/launch/context.jpg" alt="Observatory with telescope pointing up into the night sky" draggable="false"/>
           </div>
   </div>
 
