--- a/lore_and_mythology_experience/pages/amp_context.html
+++ b/lore_and_mythology_experience/pages/amp_context.html
@@ -19,7 +19,7 @@
       <div id="spacer">
         <div id="scrollClick" class="scroll-container">
           <div class="scroll-text">
-            Click the Telescope to Search for Psyche
+            Click the Telescope to Start
           </div>
         </div>
       </div>
