--- a/lore_and_mythology_experience/pages/index.html
+++ b/lore_and_mythology_experience/pages/index.html
@@ -84,7 +84,7 @@ experience that will explore the lore and mythology behind the </br>
         <div class="footer">
           <div class="footer-links">
             <div class="footer-link"><a href="../../satellite_experience/pages/about_page.html">About</a></div>
-            <div class="footer-link"><a href="https://psyche.asu.edu/">Psyche Mission</a></div>
+            <div class="footer-link"><a href="https://psyche.asu.edu/" target="_blank">Psyche Mission</a></div>
           </div>
         </div>
     </div>
