--- a/satellite_experience/pages/about_page.html
+++ b/satellite_experience/pages/about_page.html
@@ -8,9 +8,21 @@
   </head>
   <body>
     <div class="container">
-
       <div class="about-title">
-        <button class="logo" onclick="history.back()">Back</button>
+        <button
+          class="logo"
+          id="back-button"
+          type="button"
+          onclick="history.back()"
+        >
+          <img
+            src="../assets/images/Psyche_Icon_Color-SVG.svg"
+            alt="Psyche Icon"
+            id="psyche-icon"
+          />
+          <p class="back-link">Back</p>
+        </button>
+
         <header><h1>About the Team</h1></header>
       </div>
 
@@ -24,7 +36,7 @@
           <div class="team-member">
             <div class="pfp-container">
               <img
-                src="../assets/images/help_icon.png"
+                src="../assets/images/user.png"
                 alt="anonymous pfp"
                 class="pfp-icon"
               />
@@ -53,36 +65,68 @@
               <div class="name">Emily Dinaro</div>
               <div class="bio">
                 A photography enthusiast living in Denver, CO. I dream of
-                supporting my community, helping reduce our impacts on the planet
-                while systemically building equity.
+                supporting my community, helping reduce our impacts on the
+                planet while systemically building equity.
               </div>
             </div>
           </div>
 
           <div class="team-member">
-            <div class="pfp-container" style="background-image: url('../assets/images/Nicole_PFP.jpg'); background-size: cover;"></div>
+            <div
+              class="pfp-container"
+              style="
+                background-image: url(&quot;../assets/images/Nicole_PFP.jpg&quot;);
+                background-size: cover;
+              "
+            ></div>
             <div class="name-container">
               <div class="role">Full-Stack Software Engineer</div>
               <div class="name">Nicole Garcia</div>
-              <div class="bio">Passionate about art, music, reading, and exploring the world of natural health and apothecary. I have a deep curiosity for learning, especially about how things work, how to fix them, and the science behind well-being.</div>
+              <div class="bio">
+                Passionate about art, music, reading, and exploring the world of
+                natural health and apothecary. I have a deep curiosity for
+                learning, especially about how things work, how to fix them, and
+                the science behind well-being.
+              </div>
             </div>
           </div>
 
           <div class="team-member">
-            <div class="pfp-container" style="background-image: url('../assets/images/ramcmana_pfp.jpg'); background-size: cover;"></div>
+            <div
+              class="pfp-container"
+              style="
+                background-image: url(&quot;../assets/images/ramcmana_pfp.jpg&quot;);
+                background-size: cover;
+              "
+            ></div>
             <div class="name-container">
               <div class="role">Full-Stack Software Engineer</div>
               <div class="name">Ryan McManamy</div>
-              <div class="bio">ASU Software Engineering major with subsidiary interests in philosophy, music, and games. Regards coffee as a necessity. Believes that perpetual motion is possible. Obstinate proponent of the Gambler's Fallacy.</div>
+              <div class="bio">
+                ASU Software Engineering major with subsidiary interests in
+                philosophy, music, and games. Regards coffee as a necessity.
+                Believes that perpetual motion is possible. Obstinate proponent
+                of the Gambler's Fallacy.
+              </div>
             </div>
           </div>
 
           <div class="team-member">
-            <div class="pfp-container" style="background-image: url('../assets/images/collin_pfp.png'); background-size: cover;"></div>
+            <div
+              class="pfp-container"
+              style="
+                background-image: url(&quot;../assets/images/collin_pfp.png&quot;);
+                background-size: cover;
+              "
+            ></div>
             <div class="name-container">
               <div class="role">Full-Stack Software Engineer</div>
               <div class="name">Collin Miller</div>
-              <div class="bio">An ardent creator, I enjoy everything from cartography to programming to drawing. In general, I'm fascinated by stories and the story of humanity is the most interesting of all.</div>
+              <div class="bio">
+                An ardent creator, I enjoy everything from cartography to
+                programming to drawing. In general, I'm fascinated by stories
+                and the story of humanity is the most interesting of all.
+              </div>
             </div>
           </div>
         </div>
@@ -94,19 +138,26 @@
             <ul>
               <li>NASA/Kim Shiflett</li>
               <li>ESO/LAM</li>
-              <li>NASA/JPL-Caltech/ASU/MSSS: The Psyche Multispectral Imager</li>
-              <li>Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray and Neutron Spectrometer</li>
+              <li>
+                NASA/JPL-Caltech/ASU/MSSS: The Psyche Multispectral Imager
+              </li>
+              <li>
+                Johns Hopkins APL/Ed Whitman: Psyche Gamma-Ray and Neutron
+                Spectrometer
+              </li>
               <li>NASA/JPL-Caltech: Psyche Magnetometer</li>
               <li>NASA/JPL-Caltech: Radio Science</li>
               <li>NASA/JPL-Caltech: Deep Space Optical Communication (DSOC)</li>
             </ul>
-            
           </div>
           <div class="citation-section-title">Other:</div>
           <div class="citation-section">
             <ul>
               <li>Maxar Technologies: Psyche Spacecraft</li>
-              <li>NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space Center (Highlights)</li>
+              <li>
+                NASA/JPL-Caltech: Psyche Mission Launches From Kennedy Space
+                Center (Highlights)
+              </li>
             </ul>
           </div>
         </div>
@@ -115,12 +166,21 @@
       <footer>
         <div class="about-title">
           <div class="disclaimer">
-            This work was created in partial fulfillment of Arizona State University Capstone Course SER 401. The work is a result of the Psyche Student Collaborations component of NASA’s Psyche Mission (https://psyche.asu.edu).
-            “Psyche: A Journey to a Metal World” [Contract number NNM16AA09C] is part of the NASA Discovery Program mission to solar system targets. Trade names and trademarks of ASU and NASA are used in this work for identification only. Their usage does not constitute an official endorsement, either expressed or implied, by Arizona State University or National Aeronautics and Space Administration. The content is solely the responsibility of the authors and does not necessarily represent the official views of ASU or NASA.
+            This work was created in partial fulfillment of Arizona State
+            University Capstone Course SER 401. The work is a result of the
+            Psyche Student Collaborations component of NASA’s Psyche Mission
+            (https://psyche.asu.edu). “Psyche: A Journey to a Metal World”
+            [Contract number NNM16AA09C] is part of the NASA Discovery Program
+            mission to solar system targets. Trade names and trademarks of ASU
+            and NASA are used in this work for identification only. Their usage
+            does not constitute an official endorsement, either expressed or
+            implied, by Arizona State University or National Aeronautics and
+            Space Administration. The content is solely the responsibility of
+            the authors and does not necessarily represent the official views of
+            ASU or NASA.
           </div>
         </div>
       </footer>
     </div>
-    
   </body>
 </html>
