--- a/satellite_experience/pages/index.html
+++ b/satellite_experience/pages/index.html
@@ -30,7 +30,7 @@
         <div class="psyche-info-headline">See Psyche's course,</div>
         <div class="psyche-info-headline">from launch to arrival.</div>
         <div class="psyche-info-headline">Explore the Mission.</div>
-        
+
         <!-- Launch Button -->
         <button id="launch-button" type="button" onclick="onClick()">
           Launch AR Experience
@@ -50,41 +50,70 @@
 
       <!-- Main Content Section -->
       <div class="fade-in-section">
-          <div class="psyche-info">
-              <div class="psyche-info-line"> Explore the current mission progress</div>
-              <div class="psyche-info-line"> See the distance traveled.</div>
-              <div class="psyche-info-line"> Countdown to the arrival.</div>
+        <div class="psyche-info">
+          <div class="psyche-info-line">
+            Explore the current mission progress.
           </div>
+          <div class="psyche-info-line">See the distance traveled.</div>
+          <div class="psyche-info-line">Countdown to the arrival.</div>
+        </div>
 
-          <div class="psyche-satellite-img">
-              <img src="../assets/images/main_content.png" alt="Psyche Satellite Image" />
-          </div>
+        <div class="psyche-satellite-img">
+          <img
+            src="../assets/images/main_content.png"
+            alt="Psyche Satellite Image"
+          />
+        </div>
       </div>
 
       <!-- Instrument Content Section -->
       <div class="fade-in-section">
-          <div class="psyche-info">
-              <div class="psyche-info-line"> Explore the spacecraft with your phone.</div>
-              <div class="psyche-info-line"> Checkout the spacecraft's equipment</div>
-              <div class="psyche-info-line"> Learn of the mission's experiments</div>
+        <div class="psyche-info">
+          <div class="psyche-info-line">
+            Explore the spacecraft with your phone.
           </div>
+          <div class="psyche-info-line">
+            Checkout the spacecraft's equipment.
+          </div>
+          <div class="psyche-info-line">
+            Learn of the mission's experiments.
+          </div>
+        </div>
 
-          <div class="psyche-satellite-img">
-              <img src="../assets/images/instruments_content.png" alt="Psyche Satellite Image" />
-          </div>
+        <div class="psyche-satellite-img">
+          <img
+            src="../assets/images/instruments_content.png"
+            alt="Psyche Satellite Image"
+          />
+        </div>
       </div>
 
       <!-- Mission Content Section -->
       <div class="fade-in-section">
-          <div class="psyche-info">
-              <div class="psyche-info-line"> Explore the full mission.</div>
-              <div class="psyche-info-line"> Watch the launch of the spacecraft.</div>
-              <div class="psyche-info-line"> View the approach of Psyche.</div>
-              <div class="psyche-info-line"> Watch as we uncover the origins of Psyche</div>
+        <div class="psyche-info">
+          <div class="psyche-info-line">Explore the full mission.</div>
+          <div class="psyche-info-line">
+            Watch the launch of the spacecraft.
           </div>
-          <div class="psyche-satellite-img">
-              <img src="../assets/images/mission_content.png" alt="Psyche Satellite Image" />
+          <div class="psyche-info-line">View the approach of Psyche.</div>
+          <div class="psyche-info-line">
+            Watch as we uncover the origins of Psyche.
           </div>
+        </div>
+        <div class="psyche-satellite-img">
+          <img
+            src="../assets/images/mission_content.png"
+            alt="Psyche Satellite Image"
+          />
+        </div>
+      </div>
+
+      <!-- footer -->
+      <div class="footer">
+        <div class="footer-links">
+          <div><a href="about_page.html">About</a></div>
+          <div><a href="https://psyche.asu.edu/" target="_blank">Psyche Mission</a></div>
+        </div>
       </div>
     </div>
   </body>
