--- a/satellite_experience/pages/main_page.html
+++ b/satellite_experience/pages/main_page.html
@@ -44,8 +44,8 @@
 
         let activatedTriggers = 0;
 
-        triggers.forEach((k, v) => {
-          if (v) {
+        Object.keys(triggers).forEach(function (k) {
+          if (triggers[k]) {
             activatedTriggers++;
           }
         });
